--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div> 
                  <div class="rightSection2">
                      <div class="picture"></div>
-                    <img src="pr1.PNG" alt="developer pic"></div> 
+                    <img src="pr1.jpg" alt="developer pic"></div> 
             </div> 
         </section> 
         </main>  
